<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_image"
    android:gravity="top|center_horizontal"
    android:orientation="vertical"
    android:paddingTop="40dp"
    android:paddingBottom="80dp">

    <LinearLayout
        android:id="@+id/lytReviewData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="6dp"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:descendantFocusability="beforeDescendants"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:gravity="top|center_horizontal"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageButton
                            android:id="@+id/deleteBtn"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentEnd="true"
                            android:background="@drawable/bg_rounded_blue"
                            android:contentDescription="@string/labeldelete"
                            android:src="@drawable/ic_delete"
                            android:tint="@android:color/white" />

                        <ImageButton
                            android:id="@+id/backBtn"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@drawable/bg_rounded_blue"
                            android:contentDescription="@string/labelback"
                            android:src="@drawable/ic_arrow"
                            android:rotation="180"
                            android:tint="@android:color/white" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/hint_ktp"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvKTP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_rounded_transparent_border_grey"
                        android:maxLength="100"
                        android:padding="10dp"
                        android:textColor="@color/blue"
                        android:textColorHint="@color/grey"
                        android:textSize="14sp"
                        tools:text="Jl. Bekasi" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/hint_name"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_rounded_transparent_border_grey"
                        android:maxLength="100"
                        android:padding="10dp"
                        android:textColor="@color/blue"
                        android:textColorHint="@color/grey"
                        android:textSize="14sp"
                        tools:text="Jl. Bekasi" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/hint_rekening"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvRekening"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_rounded_transparent_border_grey"
                        android:maxLength="100"
                        android:padding="10dp"
                        android:textColor="@color/blue"
                        android:textColorHint="@color/grey"
                        android:textSize="14sp"
                        tools:text="Jl. Bekasi" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/hint_pendidikan"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvPendidikan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_rounded_transparent_border_grey"
                        android:maxLength="100"
                        android:padding="10dp"
                        android:textColor="@color/blue"
                        android:textColorHint="@color/grey"
                        android:textSize="14sp"
                        tools:text="Jl. Bekasi" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/hint_birthday"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvBirthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_rounded_transparent_border_grey"
                        android:maxLength="100"
                        android:padding="10dp"
                        android:textColor="@color/blue"
                        android:textColorHint="@color/grey"
                        android:textSize="14sp"
                        tools:text="Jl. Bekasi" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/hint_alamat_ktp"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvAlamatKTP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_rounded_transparent_border_grey"
                        android:maxLength="100"
                        android:padding="10dp"
                        android:textColor="@color/blue"
                        android:textColorHint="@color/grey"
                        android:textSize="14sp"
                        tools:text="Jl. Bekasi" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/hint_tipe_rumah"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvTipeRumah"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_rounded_transparent_border_grey"
                        android:maxLength="100"
                        android:padding="10dp"
                        android:textColor="@color/blue"
                        android:textColorHint="@color/grey"
                        android:textSize="14sp"
                        tools:text="Jl. Bekasi" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/hint_no_blok"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvNoBlok"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_rounded_transparent_border_grey"
                        android:maxLength="100"
                        android:padding="10dp"
                        android:textColor="@color/blue"
                        android:textColorHint="@color/grey"
                        android:textSize="14sp"
                        tools:text="Jl. Bekasi" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/hint_provinsi"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvProvinsi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_rounded_transparent_border_grey"
                        android:maxLength="100"
                        android:padding="10dp"
                        android:textColor="@color/blue"
                        android:textColorHint="@color/grey"
                        android:textSize="14sp"
                        tools:text="Jl. Bekasi" />

                    <Button
                        android:id="@+id/submitBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/bg_rounded_blue"
                        android:text="@string/btn_submit"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lytReviewData"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-20dp"
        android:background="@drawable/bg_rounded_blue"
        android:padding="10dp"
        android:text="@string/label_review_data"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="17sp" />

</RelativeLayout>