<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_image"
    android:gravity="top|center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lytDataDiri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="6dp"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:descendantFocusability="beforeDescendants"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:gravity="top|center_horizontal"
                android:orientation="vertical"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/deleteBtn"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/bg_rounded_blue"
                        android:contentDescription="@string/labeldelete"
                        android:src="@drawable/ic_delete"
                        android:tint="@android:color/white" />

                    <ImageButton
                        android:id="@+id/backBtn"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/bg_rounded_blue"
                        android:contentDescription="@string/labelback"
                        android:rotation="180"
                        android:src="@drawable/ic_arrow"
                        android:tint="@android:color/white"
                        android:visibility="gone" />
                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etKtp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_rounded_transparent_border_grey"
                        android:hint="@string/hint_ktp"
                        android:inputType="number"
                        android:maxLength="16"
                        android:padding="10dp"
                        android:textColor="@color/blue"
                        android:textColorHint="@color/grey"
                        android:textSize="14sp"
                        tools:text="320849308490" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_rounded_transparent_border_grey"
                        android:hint="@string/hint_name"
                        android:inputType="textCapSentences"
                        android:maxLength="10"
                        android:padding="10dp"
                        android:textColor="@color/blue"
                        android:textColorHint="@color/grey"
                        android:textSize="14sp"
                        tools:text="Arif Rahman" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etNorek"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_rounded_transparent_border_grey"
                        android:hint="@string/hint_rekening"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:padding="10dp"
                        android:textColor="@color/blue"
                        android:textColorHint="@color/grey"
                        android:textSize="14sp"
                        tools:text="3243234" />

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_rounded_transparent_border_grey"
                    android:padding="10dp">

                    <Spinner
                        android:id="@+id/eduSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etBirthday"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_rounded_transparent_border_grey"
                        android:focusable="false"
                        android:hint="@string/hint_birthday"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/blue"
                        android:textColorHint="@color/grey"
                        android:textSize="14sp"
                        tools:text="3243234" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/submitBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_rounded_blue"
                    android:text="@string/btn_submit"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lytDataDiri"
        android:layout_marginBottom="-20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_rounded_blue"
            android:padding="10dp"
            android:text="@string/label_data_diri"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

    </RelativeLayout>
</RelativeLayout>