<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_image"
    android:gravity="top|center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lytAlamatKTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="6dp"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:descendantFocusability="beforeDescendants"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:gravity="top|center_horizontal"
                android:orientation="vertical"
                android:padding="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etAlamatKTP"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_rounded_transparent_border_grey"
                        android:hint="@string/hint_alamat_ktp"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLength="100"
                        android:padding="10dp"
                        android:textColor="@color/blue"
                        android:textColorHint="@color/grey"
                        android:textSize="14sp"
                        tools:text="Jl. Bekasi" />

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_rounded_transparent_border_grey"
                    android:padding="10dp">

                    <Spinner
                        android:id="@+id/rumahSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etNoBlok"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_rounded_transparent_border_grey"
                        android:digits="abcdefghijklmnopqrstuvwxyz1234567890 "
                        android:hint="@string/hint_no_blok"
                        android:imeOptions="actionDone"
                        android:inputType="textNoSuggestions"
                        android:padding="10dp"
                        android:textColor="@color/blue"
                        android:textColorHint="@color/grey"
                        android:textSize="14sp"
                        tools:text="3243234" />

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_rounded_transparent_border_grey"
                    android:padding="10dp">

                    <Spinner
                        android:id="@+id/provinsiSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </RelativeLayout>

                <Button
                    android:id="@+id/submitBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_rounded_blue"
                    android:text="@string/btn_submit"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lytAlamatKTP"
        android:layout_marginBottom="-20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_rounded_blue"
            android:padding="10dp"
            android:text="@string/label_alamat_ktp"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

    </RelativeLayout>
</RelativeLayout>